adicionado o projeto amigo e melhorando o codigo

--- a/index.html
+++ b/index.html
@@ -78,16 +78,22 @@
     </div>
     <!--Inicio de agrupamentos de projetos-->
     <div class="presentation-projects" id="projects">
-        <div class="project-stoneridge" id="stoneridge">
+        <div class="project-hub" id="hub">
             <div class="project-title">BC-HUB</div>
             <div class="project-about" >
                 <a id="bc_hub"></a>
             </div>
         </div>
-        <div class="project-v3" id="v3">
+        <div class="project-calc" id="calc">
             <div class="project-title">FC-CALC</div>
             <div class="project-about">
                 <a id="fc_calc"></a>  
+            </div>
+        </div>
+        <div class="project-amigo-secreto" id="secret">
+            <div class="project-title">AMG-SECRETO</div>
+            <div class="project-about">
+                <a id="amg_secret"></a>  
             </div>
         </div>
     </div>
