--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="project-amigo-secreto" id="secret">
-            <div class="project-title">AMG-SECRETO</div>
+            <div class="project-title">AM-SEC</div>
             <div class="project-about">
                 <a id="amg_secret"></a>  
             </div>
